Identified in a comment the main area

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -108,6 +108,7 @@
 
         </div>
 
+        <!-- The main area, for looking at item listings/posts -->
         <main role="main" class="pb-3">
             <div class="listing">
                 <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
