Commented the area for modal divs

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -152,6 +152,10 @@
 </body>
 </html>
 
+
+<!-- All stuff that follows is a result of modal divs -->
+
+<!-- This is the tutorial-1 modal div -->
 <div class="modal" id="tutModal">
     <div class="modal-dialog">
         <div class="modal-content">
