Identified the footer area via a comment

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -138,6 +138,7 @@
         </main>
     </div>
 
+    <!-- This is the footer, usually the area for copyright and maybe a little navigation -->
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - ReuseSU.WebSite - <a asp-area="" asp-page="/Privacy">Privacy</a>
