Updated link to UserAgreement page after renaming it.

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -32,4 +32,4 @@
     </div>
 -->
 
-<a class="nav-link text-dark" asp-area="" asp-page="/UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
