Updated link to Tutorial Start page after renaming it.

--- a/LoydCrafts.WebSite/Pages/02_UserAgreement.cshtml
+++ b/LoydCrafts.WebSite/Pages/02_UserAgreement.cshtml
@@ -5,6 +5,6 @@
 }
 
 
-<a class="nav-link text-dark" asp-area="" asp-page="/TutorialStart"> <img src="~/img/02_user_agreement.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/03_TutorialStart"> <img src="~/img/02_user_agreement.jpg" /></a>
 
 <h1>UserAgreement</h1>
