Updated link to New Post Item Specifics page after renaming it.

--- a/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "NewPostCategorySelection";
 }
 
-<a class="nav-link text-dark" asp-area="" asp-page="/NewPostItemSpecifics"> <img src="~/img/06_category_q.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/07_NewPostItemSpecifics"> <img src="~/img/06_category_q.jpg" /></a>
 
 <h1>NewPostCategorySelection</h1>
