Updated link to Tutorial After Posting page after renaming it.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -5,6 +5,6 @@
 }
 
 
-<a class="nav-link text-dark" asp-area="" asp-page="/TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/08_TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
 
 <h1>NewPostItemSpecifics</h1>
