Updated link to Tutorial Item Read View page after renaming it.

--- a/LoydCrafts.WebSite/Pages/08_TutorialAfterPosting.cshtml
+++ b/LoydCrafts.WebSite/Pages/08_TutorialAfterPosting.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "TutorialAfterPosting";
 }
 
-<a class="nav-link text-dark" asp-area="" asp-page="/TutorialItemReadView"> <img src="~/img/08_made_post.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/09_TutorialItemReadView"> <img src="~/img/08_made_post.jpg" /></a>
 
 <h1>TutorialAfterPosting</h1>
