--- a/LoydCrafts.WebSite/Pages/09_TutorialItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/09_TutorialItemReadView.cshtml
@@ -5,6 +5,6 @@
 }
 
 
-<a class="nav-link text-dark" asp-area="" asp-page="/TutorialEnd"> <img src="~/img/09_post_menu.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/10_TutorialEnd"> <img src="~/img/09_post_menu.jpg" /></a>
 
 <h1>TutorialItemReadView</h1>
