--- a/LoydCrafts.WebSite/Pages/10_TutorialEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/10_TutorialEnd.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "TutorialEnd";
 }
 
-<a class="nav-link text-dark" asp-area="" asp-page="/Index"> <img src="~/img/10_tutorial_finish.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/11_HomepageAfterTutorial"> <img src="~/img/10_tutorial_finish.jpg" /></a>
 
 <h1>TutorialEnd</h1>
