--- a/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
+++ b/LoydCrafts.WebSite/Pages/12_ItemReadView.cshtml
@@ -7,4 +7,4 @@
 <img src="~/img/Danial_2_EvilPost.jpg" />
 <h1>ItemReadView</h1>
 <a class="nav-link text-dark" asp-area="" asp-page="/13_AboutFlagging"> About Flagging </a>
-<a class="nav-link text-dark" asp-area="" asp-page="/FlagPost"> Flag Post </a>
+<a class="nav-link text-dark" asp-area="" asp-page="/14_FlagPost"> Flag Post </a>
