--- a/LoydCrafts.WebSite/Pages/15_FlaggingConfirmation.cshtml
+++ b/LoydCrafts.WebSite/Pages/15_FlaggingConfirmation.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "FlaggingConfirmation";
 }
 
-<a class="nav-link text-dark" asp-area="" asp-page="/DemoEnd"> <img src="~/img/Daniel_5_Flagged.jpg" /></a>
+<a class="nav-link text-dark" asp-area="" asp-page="/16_DemoEnd"> <img src="~/img/Daniel_5_Flagged.jpg" /></a>
 
 <h1>FlaggingConfirmation</h1>
