Added link to Item Read View page for third item listed in Layout

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -119,7 +119,7 @@
             </div>
             <div class="listing">
                 <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-                <div class="listing-item-title" style="float:left">Apple Earbuds 3</div>
+                <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Apple Earbuds 3</></a>
                 <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
                 <div class="listing-item-text">3 Great earbuds, only $75!</div>
             </div>
