Added new CSS class for Create Post boxes.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -182,6 +182,13 @@
     margin-left: 115px;
 }
 
+.create-post {
+    height: 700px;
+    width: 700px;
+    float: left;
+    background-color: lightgray;
+}
+
 
 
 /* Everything above this point added by ReuseSU prototype dev team */
