Made a new div section for Create Post details, commented out image.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -4,7 +4,16 @@
     ViewData["Title"] = "NewPostItemSpecifics";
 }
 
-
+<!--
 <a class="nav-link text-dark" asp-area="" asp-page="/08_TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
 
+
 <h1>NewPostItemSpecifics</h1>
+-->
+
+<main role="main" class="pb-3">
+    <div class="create-post">
+
+    </div>
+
+</main>
