Adjusted create post box size and centered it.  Note removing the float will cause it to overlap with the existing elements specified by Layout.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -183,9 +183,12 @@
 }
 
 .create-post {
+    float: right;
     height: 700px;
-    width: 700px;
-    float: left;
+    width: 825px;
+    margin-left: 250px;
+    margin-right: 50px;
+    margin-top: 25px;
     background-color: lightgray;
 }
 
