Added div class for title section of New Post box.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -13,7 +13,8 @@
 
 <main role="main" class="pb-3">
     <div class="create-post">
-
+        <div class="create-post-title">Item Specifics</div>
+        <!--<button type="submit" class="search-button">Search</button>-->
     </div>
 
 </main>
