Added CSS class for New Post Item Description text box.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -201,6 +201,17 @@
     font-size: 35px;
 }
 
+.create-post-description {
+    width: 75%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
 
 
 /* Everything above this point added by ReuseSU prototype dev team */
