--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -14,7 +14,7 @@
 <main role="main" class="pb-3">
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
-        <!--<button type="submit" class="search-button">Search</button>-->
+        <input type="text" class="create-post-description"></input>
     </div>
 
 </main>
