Revert "Added default text to Description text box in New Post Item Specifics box."
This reverts commit ff49696a559a5aa9860b3e1098b696fc69e63791.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -14,7 +14,7 @@
 <main role="main" class="pb-3">
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
-        <input type="text" value="Include more details about your item." class="create-post-description"></input>
+        <input type="text" class="create-post-description"></input>
     </div>
 
 </main>
