--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -14,7 +14,9 @@
 <main role="main" class="pb-3">
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
+        <div class="create-post-component">Description
         <input type="text" value="Include more details about your item." class="create-post-description"></input>
+        </div>
     </div>
 
 </main>
