Created modal div on home page.

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
+<div id="tutorial-modal-1" class="modal fade in"></div>
+
+
 <!--
 
 <div class="text-center">
