Moved pre-existing img into modal div.

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -13,7 +13,9 @@
     });
 </script>
 
-<div id="tutorial-modal-1" class="modal fade in"></div>
+<div id="tutorial-modal-1" class="modal fade in">
+    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
+</div>
 
 
 <!--
@@ -42,4 +44,3 @@
     </div>
 -->
 
-<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
