--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -13,7 +13,7 @@
     });
 </script>
 
-<div id="tutorial-modal-1" class="modal fade in">
+<div id="tutorial-modal-1" class="modal fade in" style="margin: 200px">
     <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
 </div>
 
