Image in tuturial modal 1 now goes to newly uploaded sliced tuturial welcome image.

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,7 +14,7 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in" style="margin: 200px">
-    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/01_welcome.jpg" /></a>
+    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/wwwroot/img/tut1_welcome_sliced.png" /></a>
 </div>
 
 
