--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -202,19 +202,20 @@
 }
 
 .create-post-component {
-
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .create-post-textbox {
     width: 75%;
     height: 150px;
-    padding: 12px 20px;
+    padding: 10px;
     box-sizing: border-box;
     border: 2px solid #ccc;
-    border-radius: 4px;
+    border-radius: 15px;
+    text-align: left;
     background-color: #f8f8f8;
     font-size: 16px;
-    color: #878787;
     resize: none;
 }
 
