Added text wrapping to textbox in New Post Item Specifics

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -15,7 +15,7 @@
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
         <div class="create-post-component">Description
-        <input type="text" value="Include more details about your item." class="create-post-textbox"></input>
+            <textarea wrap="hard"><input type="text" value="Include more details about your item." class="create-post-textbox"></textarea></input>
         </div>
     </div>
 
