--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -15,7 +15,9 @@
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
         <div class="create-post-component">Description
-            <textarea wrap="hard"><input type="text" value="Include more details about your item." class="create-post-textbox"></textarea></input>
+            <form action="#" method="post">
+                <textarea name="textarea" cols="40" rows="8"></textarea>
+            </form>
         </div>
     </div>
 
