Deleted create-post-textbox CSS class to add an input type=text instead.

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -206,19 +206,12 @@
     font-weight: bold;
 }
 
-.create-post-textbox {
-    width: 75%;
-    height: 150px;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 15px;
-    text-align: left;
-    background-color: #f8f8f8;
+input[type="text"], textarea {
+    background-color: #fff;
+    color: #000;
+    font-family: Arial;
     font-size: 16px;
-    resize: none;
 }
-
 
 
 
