Added textbox for item post Title.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -14,6 +14,11 @@
 <main role="main" class="pb-3">
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
+        <div class="create-post-component"> Title
+            <form action="#" method="post">
+                <textarea name="textarea" cols="40" rows="2"></textarea>
+            </form>
+        </div>
         <div class="create-post-component">Description
             <form action="#" method="post">
                 <textarea name="textarea" cols="40" rows="8"></textarea>
