Commented each section of the Item Specifics form and added a logistics textbox.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -14,14 +14,25 @@
 <main role="main" class="pb-3">
     <div class="create-post">
         <div class="create-post-title">Item Specifics</div>
-        <div class="create-post-component"> Title
+        <!-- Title section-->
+        <div class="create-post-component">
+            Title
             <form action="#" method="post">
                 <textarea name="textarea" cols="40" rows="2"></textarea>
             </form>
         </div>
-        <div class="create-post-component">Description
+        <!-- Description section-->
+        <div class="create-post-component">
+            Description
             <form action="#" method="post">
-                <textarea name="textarea" cols="40" rows="8"></textarea>
+                <textarea name="textarea" cols="40" rows="10"></textarea>
+            </form>
+        </div>
+        <!-- Logistics section -->
+        <div class="create-post-component">
+            Logistics
+            <form action="#" method="post">
+                <textarea name="textarea" cols="40" rows="5"></textarea>
             </form>
         </div>
     </div>
