Added text to textboxes telling users what to input into the textbox.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -16,23 +16,23 @@
         <div class="create-post-title">Item Specifics</div>
         <!-- Title section-->
         <div class="create-post-component">
-            Title
+            Title*
             <form action="#" method="post">
-                <textarea name="textarea" cols="40" rows="2"></textarea>
+                <textarea name="textarea" cols="40" rows="2">Add a short but descriptive title.</textarea>
             </form>
         </div>
         <!-- Description section-->
         <div class="create-post-component">
-            Description
+            Description*
             <form action="#" method="post">
-                <textarea name="textarea" cols="40" rows="10"></textarea>
+                <textarea name="textarea" cols="40" rows="10">Include additional details about your item (condition, measurements, etc)</textarea>
             </form>
         </div>
         <!-- Logistics section -->
         <div class="create-post-component">
             Logistics
             <form action="#" method="post">
-                <textarea name="textarea" cols="40" rows="5"></textarea>
+                <textarea name="textarea" cols="40" rows="5">Include information about where your item is located, when you're available to give it away, when you need to get rid of the item, etc.</textarea>
             </form>
         </div>
     </div>
