--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -6,10 +6,12 @@
 
 <!--
 <a class="nav-link text-dark" asp-area="" asp-page="/08_TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
+    -->
 
-
-<h1>NewPostItemSpecifics</h1>
--->
+    <div>
+        <h1 style="text-align:center">Make a New Post</h1>
+        <p style="text-align:center">Page 3 of 3</p>
+    </div>
 
 <main role="main" class="pb-3">
     <div class="create-post">
