--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -195,6 +195,17 @@
     text-align: center;
 }
 
+.creat-post-header {
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.create-post-subheader {
+    font-size: 25px;
+    text-align: center;
+}
+
 .create-post-title {
     display: inline-block;
     padding: 20px;
