Adjusted subheader properties for Create New Post - Item Specifics

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -8,9 +8,8 @@
 <a class="nav-link text-dark" asp-area="" asp-page="/08_TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
     -->
 
-    <div>
-        <h1 style="text-align:center">Make a New Post</h1>
-        <p style="text-align:center">Page 3 of 3</p>
+    <div class="create-post-header">Make a New Post
+        <div class="create-post-subheader"><br>Page 3 of 3</br></div>
     </div>
 
 <main role="main" class="pb-3">
