--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -8,33 +8,36 @@
 <a class="nav-link text-dark" asp-area="" asp-page="/08_TutorialAfterPosting"> <img src="~/img/07_fill_out_info_boxes.jpg" /></a>
     -->
 
-    <div class="create-post-header">Make a New Post
-        <div class="create-post-subheader"><br>Page 3 of 3</br></div>
+    <div class="create-post-header">Make a New Post<br />
+        <div class="create-post-subheader">Page 3 of 3</div>
     </div>
 
     <main role="main" class="pb-3">
-        <div class="create-post">
+        <div class="create-post-body">
             <div class="create-post-title">Item Specifics</div>
-            <!-- Title section-->
-            <div class="create-post-component">
-                Title*
-                <form action="#" method="post">
-                    <textarea name="textarea" cols="40" rows="2">Add a short but descriptive title.</textarea>
-                </form>
-            </div>
-            <!-- Description section-->
-            <div class="create-post-component">
-                Description*
-                <form action="#" method="post">
-                    <textarea name="textarea" cols="40" rows="10">Include additional details about your item (condition, measurements, etc)</textarea>
-                </form>
-            </div>
-            <!-- Logistics section -->
-            <div class="create-post-component">
-                Logistics
-                <form action="#" method="post">
-                    <textarea name="textarea" cols="40" rows="5">Include information about where your item is located, when you're available to give it away, when you need to get rid of the item, etc.</textarea>
-                </form>
+            <div class="create-post-photo-section">Add Photos</div>
+            <div class="create-post-text-section">
+                <!-- Title section-->
+                <div class="create-post-component">
+                    Title*
+                    <form action="#" method="post">
+                        <textarea name="textarea" cols="40" rows="2">Add a short but descriptive title.</textarea>
+                    </form>
+                </div>
+                <!-- Description section-->
+                <div class="create-post-component">
+                    Description*
+                    <form action="#" method="post">
+                        <textarea name="textarea" cols="40" rows="10">Include additional details about your item (condition, measurements, etc)</textarea>
+                    </form>
+                </div>
+                <!-- Logistics section -->
+                <div class="create-post-component">
+                    Logistics
+                    <form action="#" method="post">
+                        <textarea name="textarea" cols="40" rows="5">Include information about where your item is located, when you're available to give it away, when you need to get rid of the item, etc.</textarea>
+                    </form>
+                </div>
             </div>
             <!-- Publish Post Button-->
             <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/08_TutorialAfterPosting">Publish Post
