--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -13,9 +13,13 @@
     });
 </script>
 
-<div id="tutorial-modal-1" class="modal fade in" style="margin: 200px">
-    <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png"/></a>
+<div id="tutorial-modal-1" class="modal fade in">
+    <div style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
+        <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+    </div>
 </div>
+
+
 
 <!--
 
