--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -19,7 +19,11 @@
     </div>
 </div>
 
-
+<div id="tutorial-modal-2" class="modal fade in">
+    <div style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
+        <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+    </div>
+</div>
 
 <!--
 
