--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -15,6 +15,7 @@
 
 <div id="tutorial-modal-1" class="modal fade in">
     <div style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
         <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
     </div>
 </div>
