Style moved from inner div to modal-dialog div in tutorial-modal-2

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,9 +14,9 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin-top: 200px;">
+    <div class="modal-dialog modal-lg" style="margin-top: 200px; margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;"">
         <div class="modal-content">
-            <div style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
+            <div>
                 <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
