--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,10 +14,12 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin-top: 200px; margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;"">
+    <div class="modal-dialog modal-lg" style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;"">
         <div class="modal-content">
             <div>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
+                <div class="modal-header">
+                    <h3 class="modal-title boldfont">Welcome</h3>
+                </div>
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
         </div>
