--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -19,8 +19,11 @@
             <div>
                 <div class="modal-header">
                     <h3 class="modal-title boldfont">Welcome</h3>
+                    <div class="modal-body">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+                    </div>
+
                 </div>
-                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
         </div>
     </div>
