--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -21,8 +21,12 @@
                 <div class="modal-body">
                     <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
                 </div>
+                <div class="modal-footer">
+                    <p class="modaltext">Thigns</p>
+
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#modal2">next</button>
+                </div>
             </div>
-        </div>
     </div>
 </div>
 
