--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -31,9 +31,19 @@
 </div>
 
 <div id="tutorial-modal-2" class="modal fade in">
-    <div style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
-        <button type="button" class="btn btn-danger" data-dismiss="modal2">Close</button>
-        <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+    <div class="modal-dialog modal-lg" style="margin: 400px; width: 500px; height: 300px; border-radius: 20px; background-color: #d7d7d7;" ">
+        <div class="modal-content">
+            <div class="modal-header">
+            </div>
+            <h3 class="modal-title boldfont">Welcome</h3>
+            <div class="modal-body">
+                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+            </div>
+            <div class="modal-footer">
+                <p class="modaltext">Thigns</p>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-2">next</button>
+            </div>
+        </div>
     </div>
 </div>
 
