Bugfix: deleted extra commas in modal tutorials

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,7 +14,7 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 400px; width: 500px; height: 300px; border-radius: 20px; background-color: #d7d7d7;"">
+    <div class="modal-dialog modal-lg" style="margin: 400px; width: 500px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
         <div class="modal-content">
             <div class="modal-header">
             </div>
@@ -31,7 +31,7 @@
 </div>
 
 <div id="tutorial-modal-2" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 400px; width: 500px; height: 300px; border-radius: 20px; background-color: #d7d7d7;" ">
+    <div class="modal-dialog modal-lg" style="margin: 400px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
         <div class="modal-content">
             <div class="modal-header">
             </div>
