in tutorial 1 moved background-color from modal-dialog div to modal-content div

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,8 +14,8 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 200px; border-radius: 20px; background-color: #7d7d7d;">
-        <div class="modal-content">
+    <div class="modal-dialog modal-lg" style="margin: 200px; border-radius: 20px;">
+        <div class="modal-content" style="background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <h3 class="modal-title boldfont">Welcome</h3>
