--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,11 +14,19 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 100px 300px; border-radius: 20px;">
-        <div class="modal-content" style="background-color: #d7d7d7;">
+    <div class="modal-dialog modal-lg" style="margin: 100px 300px;">
+        <div class="modal-content" style="background-color: #d7d7d7; border-radius: 20px;">
             <div class="modal-header">
             </div>
-            <h3 class="modal-title boldfont">Welcome</h3>
+            <h2 class="modal-title boldfont">Welcome to ReuseSU!</h2>
+            <h4 style="text-align: center;">
+                <p>
+                    <em>
+                        a simple, easy-to-use platform for free item exchanges<br>
+                        within the Seattle University community
+                    </em>
+                </p>
+            </h4>
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
