Center modal object on home page

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -14,7 +14,7 @@
 </script>
 
 <div id="tutorial-modal-1" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 100px 300px;">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content" style="background-color: #d7d7d7; border-radius: 20px;">
             <div class="modal-header">
             </div>
