--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -40,6 +40,12 @@
     margin-right: auto;
 }
 
+.reusese-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .new-post-plus {
     display: inline-block;
     line-height: 40px;
