Center modal 1 title

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -40,6 +40,10 @@
     margin-right: auto;
 }
 
+.center-css{
+    text-align: center;
+}
+
 .reusese-center {
     display: block;
     margin-left: auto;
