--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="modal-content" style="background-color: #d7d7d7; border-radius: 20px;">
             <div class="modal-header">
             </div>
-            <h2 class="modal-title boldfont">Welcome to ReuseSU!</h2>
+            <h2 class="modal-title boldfont center-css">Welcome to ReuseSU!</h2>
             <h4 style="text-align: center;">
                 <p>
                     <em>
