Make modal 1 title bold

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -40,7 +40,9 @@
     margin-right: auto;
 }
 
-.center-css{
+.reusesu-mod-title{
+    font-size: 36px;
+    font-weight: bold;
     text-align: center;
 }
 
