Format the sub-title of Modal 1

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -19,12 +19,10 @@
             <div class="modal-header">
             </div>
             <h2 class="boldfont reusesu-mod-title">Welcome to ReuseSU!</h2>
-            <h4 style="text-align: center;">
+            <h4 class="modal-sub-title">
                 <p>
-                    <em>
-                        a simple, easy-to-use platform for free item exchanges<br>
-                        within the Seattle University community
-                    </em>
+                    a simple, easy-to-use platform for free item exchanges<br>
+                    within the Seattle University community
                 </p>
             </h4>
             <div class="modal-body">
