Add CSS for modal 1 body

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -25,6 +25,9 @@
                     within the Seattle University community
                 </p>
             </h4>
+            <div class="reuse-mod-body">
+
+            </div>
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center"/></a>
             </div>
