Add body text to modal 1

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -26,7 +26,8 @@
                 </p>
             </h4>
             <div class="reuse-mod-body">
-
+                It looks like this is your first time on the site,<br />
+                so here's an overview of how it works:
             </div>
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center"/></a>
