Start staging new picture area in modal 1

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -31,6 +31,10 @@
             </div>
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center"/></a>
+                <div>
+                    Picture - text
+                </div>
+            
             </div>
             <div class="modal-footer">
                 <p class="modaltext">Thigns</p>
