Add css to modal 1 body entries

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center"/></a>
-                <div>
+                <div class="modal-body-items">
                     Picture - text
                 </div>
             
