Separate modal 1 items into their own divs

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -59,8 +59,18 @@
     font-size: 24px;
 }
 
+.modal-body-img {
+    text-align: left;
+    display: inline-block;
+}
+
+.modal-body-text {
+    display: inline-block;
+}
+
 .modal-body-items{
     text-align: center;
+    text-size: 20px;
 }
 
 .reusese-center {
