--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -32,7 +32,12 @@
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center"/></a>
                 <div class="modal-body-items">
-                    <img src="~/img/M1-SUIconSmall.png" height="74" width="62" />  Picture - text
+                    <div class="modal-body-img">
+                        <img src="~/img/M1-SUIconSmall.png" height="74" width="62" />
+                    </div>
+                    <div class="modal-body-text">
+                        Picture - text
+                    </div>
                 </div>
             
             </div>
