Convert modal 1 item entries to be a div/css table

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -32,11 +32,13 @@
             <div class="modal-body">
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center"/></a>
                 <div class="modal-body-items">
-                    <div class="modal-body-img">
-                        <img src="~/img/M1-SUIconSmall.png" height="74" width="62" />
-                    </div>
-                    <div class="modal-body-text">
-                        Picture - text
+                    <div class="table-row">
+                        <div class="modal-body-img">
+                            <img src="~/img/M1-SUIconSmall.png" height="74" width="62" />
+                        </div>
+                        <div class="modal-body-text">
+                            Picture - text text test lorem ipsum dlfjs fjsd fj sdlkfjsldj<br />flsjflsj dflj sdflk jsdklfj slfj sldfj sdlfj sdlkfj 
+                        </div>
                     </div>
                 </div>
             
