--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -36,9 +36,19 @@
                             <img src="~/img/M1-SUIconSmall.png" height="74" width="62" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsum dlfjs fjsd fj sdlkfjsldj<br />flsjflsj dflj sdflk jsdklfj slfj sldfj sdlfj sdlkfj 
+                            Picture - text text test lorem ipsum dlfjs fjsd fj sdlkfjsldj<br />flsjflsj dflj sdflk jsdklfj slfj sldfj sdlfj sdlkfj
                         </div>
                     </div>
+
+                    <div class="table-row">
+                        <div class="modal-body-img">
+                            <img src="~/img/M2-PushPinSmall.png" height="60" width="60" />
+                        </div>
+                        <div class="modal-body-text">
+                            Picture - text text test lorem ipsumsdlkfjsldj<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
+                        </div>
+                    </div>
+
                 </div>
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
             </div>
