Add padding to separate rows in modal 1 table

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -31,7 +31,8 @@
             </div>
             <div class="modal-body">
                 <div class="modal-body-items">
-                    <div class="table-row">
+
+                    <div class="reusesu-table-row">
                         <div class="modal-body-img">
                             <img src="~/img/M1-SUIconSmall.png" height="74" width="62" />
                         </div>
