--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -67,6 +67,7 @@
     width: auto;
     margin-right: auto;
     margin-left: auto;
+    border: 1px solid #AA0000;
 }
 
 .reusesu-table-row {
@@ -74,6 +75,7 @@
     width: auto;
     clear: both;
     padding-top: 150px;
+    border: 1px solid #AA0000;
 }
 
 .modal-body-img {
@@ -82,6 +84,7 @@
     float: left;
     margin-right: 20px;
     display: table-column;
+    border: 1px solid #AA0000;
 }
 
 .modal-body-text {
@@ -90,6 +93,7 @@
     float: left;
     display: table-column;
     width: auto;
+    border: 1px solid #AA0000;
 }
 
 .reusese-center {
