Align images to right in modal 1 table

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -79,10 +79,11 @@
 }
 
 .modal-body-img {
-    text-align: left;
+    text-align: right;
     padding-top: 15px;
     float: left;
     margin-right: 20px;
+    width: 60px;
     display: table-column;
     border: 1px solid #AA0000;
 }
