Remove centering from text in modal 1 table

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -37,7 +37,7 @@
                             <img src="~/img/M1-SUIconSmall.png" height="60" width="50" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsum dlfjs fjsd fj sdlkfjsldj<br />flsjflsj dflj sdflk jsdklfj slfj sldfj sdlfj sdlkfj
+                            Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk jsdklfj slfj sldfj sdlfj sdlkfj
                         </div>
                     </div>
 
