Added handshake entry to modal 1 table

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -68,6 +68,15 @@
                         </div>
                     </div>
 
+                    <div class="table-row">
+                        <div class="modal-body-img">
+                            <img src="~/img/M5HandShakeSmall.png" height="60" width="60" />
+                        </div>
+                        <div class="modal-body-text">
+                            Picture - text text test lorem ipsumsdlkfjsldj<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
+                        </div>
+                    </div>
+
                 </div>
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
             </div>
