Remove extra lorem ipsum text from modal 1 table entries

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -46,7 +46,7 @@
                             <img src="~/img/M2-PushPinSmall.png" height="60" width="60" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsumsdlkfjsldj<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
+                            Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
                         </div>
                     </div>
 
@@ -55,7 +55,7 @@
                             <img src="~/img/M3-MagSmall.png" height="60" width="60" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsumsdlkfjsldj<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
+                            Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
                         </div>
                     </div>
 
@@ -64,7 +64,7 @@
                             <img src="~/img/M4-EmailSmall.png" height="60" width="60" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsumsdlkfjsldj<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
+                            Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
                         </div>
                     </div>
 
@@ -73,7 +73,7 @@
                             <img src="~/img/M5HandShakeSmall.png" height="60" width="60" />
                         </div>
                         <div class="modal-body-text">
-                            Picture - text text test lorem ipsumsdlkfjsldj<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
+                            Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlfj sdlkfj
                         </div>
                     </div>
 
