Add what would you like to do question to modal 1

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -78,6 +78,11 @@
                     </div>
 
                 </div>
+
+                <div>
+                    What would you like to do?
+                </div>
+
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
             </div>
             <div class="modal-footer">
