Format "what would you like to do?" in modal 1

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -79,7 +79,7 @@
 
                 </div>
 
-                <div>
+                <div class="modal-what">
                     What would you like to do?
                 </div>
 
