Add buttons to bottom of modal 1

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -83,6 +83,11 @@
                     What would you like to do?
                 </div>
 
+                <div>
+                    <button type="button" class="btn btn-outline-dark modal-button">Post an item</button><br />
+                    <button type="button" class="btn btn-outline-dark modal-button">Look for items</button><br />
+                </div>
+
                 <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
             </div>
             <div class="modal-footer">
